--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -47,7 +47,7 @@ if ( $unRaid69B2 ) {
 			$swalBackground = "#f2f2f2";
 			break;
 		default:
-			$swalBackground = "#1c1b1b";
+			$swalBackground = "#1c1b1b"; // default to black
 			break;
 	}
 }	else {
@@ -60,18 +60,16 @@ if ( is_file($caPaths['addConverted']) ) {
 $date = (date("n/d"));
 
 if ( $translations ) {
+	require_once "$docroot/plugins/dynamix/include/Translations.php";
+	
 	$translationFile = "$docroot/languages/{$_SESSION['locale']}/".basename(strtolower($_SERVER['REQUEST_URI']))."-1.txt";
 	$genericFile     = "$docroot/languages/{$_SESSION['locale']}/translations.txt";
-	$pluginTranslations = @parse_language($translationFile);
-	$genericTranslations = @parse_language($genericFile);
+	$pluginTranslations = @parse_lang_file($translationFile);
+	$genericTranslations = @parse_lang_file($genericFile);
 	$pluginTranslations = array_merge(is_array($genericTranslations) ? $genericTranslations : [],is_array($pluginTranslations) ? $pluginTranslations : [] );
 	$language = array_merge($pluginTranslations,$language);
 	if ( empty($language) ) 
 		$translations = false;
-}
-
-function parse_language($file) {
-  return array_filter(parse_ini_string(preg_replace(['/"/m','/^(null|yes|no|true|false|on|off|none)=/mi','/^([^>].*)=([^"\'`].*)$/m','/^:((help|plug)\d*)$/m','/^:end$/m'],['\'','$1.=','$1="$2"',"_$1_=\"",'"'],str_replace("=\n","=''\n",file_get_contents($file)))),'strlen');
 }
 
 function tr($string,$ret=false) {
