Remove PSA if download failed
Pointless because if GitHub is down causing a download failure, the PSA wouldn't be able to be downloaded anyways

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CA_notices.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CA_notices.page
@@ -13,8 +13,10 @@ Link='nav-user'
 <?
 $unRaidSettings = parse_ini_file("/etc/unraid-version");
 $unRaid68 = version_compare($unRaidSettings['version'],"6.7.9",">");
+$caCFG = parse_plugin_cfg("community.applications");
 ?>
 
+<? if ( "{$caCFG['notifications']}" == "yes" ) :?>
 <script>
 var CA_BANNER_NOTICES = [];
 $(function() {
@@ -66,3 +68,4 @@ function ca_DismissNotice(index) {
 	});
 }
 </script>
+<?endif;?>
